# ai_project_flight_delay

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml
dags/: kedro_dag.py
docs/: airflow_report.md  eda_report.md  model_evaluation_report.md  modeling_report.md  preprocessing_report.md
mlruns/0/: meta.yaml
mlruns/0/1645cee5d94f4565bd12e83aa911a981/: meta.yaml
mlruns/0/1645cee5d94f4565bd12e83aa911a981/metrics/: cv_accuracy_mean  cv_accuracy_std  cv_f1_mean  cv_f1_std  cv_precision_mean  cv_precision_std  cv_recall_mean  cv_recall_std  test_accuracy  test_f1_score  test_precision  test_recall  test_roc_auc
mlruns/0/1731012b59f44222a7aa330a7f2625e1/: meta.yaml
mlruns/0/1731012b59f44222a7aa330a7f2625e1/metrics/: cv_accuracy_mean  cv_accuracy_std  cv_f1_mean  cv_f1_std  cv_precision_mean  cv_precision_std  cv_recall_mean  cv_recall_std  test_accuracy  test_f1_score  test_precision  test_recall  test_roc_auc
mlruns/0/4e89df9a67d24167b8989eb3902eac9d/: meta.yaml
mlruns/0/4e89df9a67d24167b8989eb3902eac9d/metrics/: cv_accuracy_mean  cv_accuracy_std  cv_f1_mean  cv_f1_std  cv_precision_mean  cv_precision_std  cv_recall_mean  cv_recall_std  test_accuracy  test_f1_score  test_precision  (+2 more)
mlruns/0/5c8c5cef427541f991668817041db8ab/: meta.yaml
mlruns/0/b1fdac8e66854426aa60a3c985d51ca2/: meta.yaml
mlruns/0/c4b7d5ba736d4c0885c4bf8620def160/: meta.yaml
notebooks/: EDA_flight_delay.ipynb
src/ai_project_flight_delay/: __init__.py  __main__.py  pipeline_registry.py  settings.py
venv_airflow/: pyvenv.cfg
(+95 files in other folders)
