[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "ai_project_flight_delay"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=1.0.0",]

[project.scripts]
ai-project-flight-delay = "ai_project_flight_delay.__main__:main"

[tool.kedro]
package_name = "ai_project_flight_delay"
project_name = "ai_project_flight_delay"
kedro_init_version = "1.0.0"
tools = "['Custom Logging', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "ai_project_flight_delay.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "a7f56e5c56b14ec88c063c6b44af1adb"
